docs/7.58/md/abenread_table_abexa.md
---
title: "Source Code"
description: |
  Public class definition CLASS cl_demo_read_table_result DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. ENDCLASS.  Public class implementation CLASS cl_demo_read_table_result IMPLEMENTATION. METHOD main. DATA: BEGIN OF line,
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenread_table_abexa.htm"
abapFile: "abenread_table_abexa.htm"
keywords: ["do", "if", "method", "class", "data", "internal-table", "field-symbol", "abenread", "table", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_data_working.htm) →  [Internal Tables (itab)](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenitab.htm) →  [itab - Processing Statements](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abentable_processing_statements.htm) →  [READ TABLE itab](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapread_table.htm) →  [READ TABLE, result](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapread_table_outdesc.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20itab%20-%20Output%20Area%2C%20ABENREAD_TABLE_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

itab - Output Area

This example demonstrates how and where the line content of internal tables is read to.

Source Code   

\* Public class definition
CLASS cl\_demo\_read\_table\_result DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_read\_table\_result IMPLEMENTATION.
  METHOD main.
    DATA: BEGIN OF line,
            col1 TYPE i,
            col2 TYPE i,
          END OF line.
    DATA itab LIKE SORTED TABLE OF line WITH UNIQUE KEY col1.
    DATA subrc TYPE sy-subrc.
    DATA tabix TYPE sy-tabix.
    FIELD-SYMBOLS <fs> LIKE LINE OF itab.
    itab = VALUE #( FOR j = 1 UNTIL j > 4
            ( col1 = j col2 = j \*\* 2 ) ).
    out->write\_data( itab )->line( ).
\* INTO line COMPARING
    line-col1 = 2.
    line-col2 = 3.
    READ TABLE itab FROM line INTO line COMPARING col2.
    subrc = sy-subrc.
    out->write( |sy-subrc: { subrc }| ).
    out->write\_data( line )->line( ).
\* INTO line TRANSPORTING
    CLEAR line.
    READ TABLE itab WITH TABLE KEY col1 = 3
                    INTO line TRANSPORTING col2.
    subrc = sy-subrc.
    tabix = sy-tabix.
    out->write( |sy-subrc: { subrc }|
      )->write( |sy-tabix: { tabix }|
      )->write\_data( line
      )->line( ).
\* TRANSPORTING NO FIELDS
    READ TABLE itab WITH KEY col2 = 16  TRANSPORTING NO FIELDS.
    subrc = sy-subrc.
    tabix = sy-tabix.
    out->write( |sy-subrc: { subrc }|
      )->write( |sy-tabix: { tabix }|
      )->line( ).
\* ASSIGNING
    READ TABLE itab WITH TABLE KEY col1 = 2 ASSIGNING <fs>.
    <fs>-col2 = 100.
    out->write\_data( itab ).
  ENDMETHOD.
ENDCLASS.

Description   

Four alternatives for output behavior when reading internal tables are shown. First a sorted table is filled with a list of square numbers.

In the first alternative, the work area line that is compatible with the line type is filled with the numbers 2 and 3. The READ statement finds the line of the table in which the key field col1 has the same content as the work area and is copied to the work area. sy-subrc is two, since different numbers are found when the field col2 is compared.

In the second alternative, the READ statement reads the line of the table in which the key field col1 has the value 3. Only the content of col2 is copied to the work area line. sy-subrc is zero and sy-tabix is three, since itab is an index table.

In the third alternative, the READ statement is used to search for the lines of the table in which the field col2 has the value 16. The primary table key is not used. No fields are copied to the work area and no lines are assigned a field symbol. Only system fields are set. sy-subrc is zero, since a line was found and sy-tabix is four.

In the READ statement of the final alternative, the lines of the table are read in which the key field col1 has the value 2 and are assigned to the field symbol <fs>. The component col2 of <fs> is assigned the value 100. This also changes the corresponding table field.